# sql_parsor

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  sample.sql
.github/workflows/: ci.yml
artifacts/week8/bench_02/: benchmark_results_02.csv  summary_02.md
artifacts/week8/bench_02_deep/: benchmark_results_02_deep.csv  summary_02_deep.md
artifacts/week8/bench_06/: benchmark_results_06.csv  summary_06.md
artifacts/week8/presentation_plotly/: week8_plotly_02.html  week8_plotly_06.html
data/: users.csv
demo/: server.js
demo/public/: app-week7-lab.js  app.js  index.html  nav.js  styles.css  week6.html  week7-lab.json  week7.html
demo/scripts/: build_demo_binaries.cmd
docs/: 02-architecture.md  03-api-reference.md  04-development-guide.md  05-learning-resources.md  06-presentation-script-4min.md  07-presentation-visuals.md  api-server-layer-spec.md
docs/explainers/: mini-dbms-http-pseudocode.md
docs/fixes/: 2026-04-15-data-integrity-hardening.md
docs/study/: endpoint-sync-async-streaming.md  graceful-shutdown.md
docs/weeks/: README.md
docs/weeks/WEEK6/: README.md  assignment.md  learning-guide.md  presentation-script.md  presentation-visuals.md
docs/weeks/WEEK7/: README.md  assignment.md  (+8 more)
include/: api_server.h  ast.h  csv_storage.h  engine_adapter.h  executor.h  http_parser.h  lexer.h  parser.h  response_builder.h  sql_processor.h  sql_result.h
include/week7/: bplus_tree.h  week7_index.h
include/week8/: api_server.h  engine_bridge.h
scripts/week8/: bench_02_design.md  bench_client_02.py  bench_client_02_deep.py  plot_bench_02.py  plot_bench_02_deep.py  plot_presentation_plotly.py  run_bench_02.sh  run_bench_02_deep.sh  run_bench_06.sh
src/: api_server.c  ast.c  bench_bplus.c  csv_storage.c  engine_adapter.c  executor.c  http_parser.c  lexer.c  main.c  main_api_server.c  main_trace.c  parser.c  response_builder.c  sql_processor.c  sql_result.c  sql_trace.c
src/week7/: bplus_tree.c  week7_index.c
src/week8/: api_server.c  engine_bridge.c  main_api_server.c
team-a/: 00-how-to-use-this-template.md  CMakeLists.txt  README.md  sample.sql
team-a/demo/: package-lock.json  package.json  server.js
team-a/docs/: 01-product-planning.md  03-api-reference.md  06-presentation-script-4min.md
team-a/include/: ast.h  csv_storage.h  executor.h
team-a/src/: csv_storage.c  executor.c  parser.c  sql_processor.c  sql_trace.c
team-a/tests/: test_bootstrap.c  test_executor.c  test_parser_insert.c
team-b/: .gitignore  AGENTS.md  Makefile  README.md  sql_processor_codex_spec.md  sql_processor_codex_step_prompts.md
team-b/.devcontainer/: Dockerfile  devcontainer.json
team-b/data/: student.csv
team-b/demo_web/: app.js  index.html  styles.css
team-b/docs/: blog_project_summary.md  interview_questions.md
team-b/manual_samples/: 01_happy_path.sql  02_select_student_by_id.sql  03_duplicate_student_id.sql  04_entry_log_unauthorized.sql  05_entry_log_missing_student.sql  README.md
team-b/scripts/: build_demo_site.py  run_demo_samples.sh
team-b/src/: datetime_utils.c  datetime_utils.h  entry_log_storage.c  entry_log_storage.h  executor.c  executor.h  main.c  parser.c  parser.h  sql_file_reader.c  sql_file_reader.h  statement_splitter.c  statement_splitter.h  student_storage.c  student_storage.h  tokenizer.c  tokenizer.h
team-b/tests/: test_datetime_utils.c  test_demo_web.sh  test_entry_log_storage.c  test_parser.c  test_step1.c  test_step4.c  test_step5.c  test_step6.c  test_student_storage.c  test_tokenizer.c
tests/: test_api_server.c  test_bplus_tree.c  test_csv_storage.c  test_data_integrity.c  test_executor.c  test_http_parser.c  test_lexer.c  test_main_integration.c  test_parser_select.c  test_sql_processor_api.c  test_week8_api_server.c  test_week8_engine_bridge.c  test_week8_locking.c
(+28 files in other folders)
